<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_acerca_de"
        android:title="@string/about"
        android:icon="@drawable/ic_acerca_de"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings">

        <!-- Submenú para los elementos dentro de settings -->
        <menu>
            <item
                android:id="@+id/action_language"
                android:title="@string/language"
                android:icon="@drawable/ic_language"
                app:actionLayout="@layout/switch_layout"/>

        </menu>
</item>

</menu>