<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/image"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:scaleType="fitCenter"
        android:src="@drawable/idioma" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <Switch
        android:id="@+id/languageSwitch"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/languge_to_select"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- Botón de cancelar -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

</LinearLayout>
